--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
+    "next-intl": "^4.3.12",
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-day-picker": "9.8.0",
