--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@tabler/icons-react": "^3.13.0",
     "@emotion/is-prop-valid": "latest",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
@@ -40,6 +39,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@studio-freight/lenis": "latest",
+    "@tabler/icons-react": "^3.13.0",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -51,6 +51,7 @@
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "motion": "^12.23.24",
     "next": "14.2.16",
     "next-intl": "^4.3.12",
     "next-themes": "^0.4.4",
